--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin: 1em 0em 5em 0em;
+  margin: auto auto 40px auto;
   font-family: Verdana;
   font-weight: bold;
   font-size: 24px;
@@ -39,14 +39,33 @@ body {
   width: 100%;
 }
 
-/* ===================== Keypad =================== */
-.table {
-  width: 10%;
-  margin: 20px auto auto auto;
+.keypad {
+  margin: 40px auto auto auto;
   text-align: center;
-  padding: none;
 }
 
-.btn-primary {
-  width: 60px;
+.btn {
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: transparent;
+  cursor: pointer;
+  border-color: black;
+  border-width: 3px;
+}
+.btn:hover {
+  font-size: 26px;
+  font-weight: 500;
+}
+.next-frame {
+  width: 80px;
+  height: 80px;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 2em;
+  background: transparent;
+  cursor: pointer;
+  border-color: black;
+  border-width: 3px;
 }
